# rfx-services

./: .gitignore  configure.ac
services/: docker_services.kconfig  docker_services.mk  service_reroute.sh
services/cmdbuild/: Makefile  Makefile.am  docker-compose.yml  ldap_auth.sh
services/cmdbuild/docker/files/: docker-entrypoint.sh
services/django-ariaform/: Makefile.am  docker-compose.yml  docker-compose.yml.in
services/django-ariaform/docker/: Dockerfile
services/django-base/: docker-compose.yml  docker-compose.yml~  settings.py
services/django-base/composeexample/: settings.py
services/homeassistant/: Makefile.am  docker-compose.yml
services/mediawiki/: LocalSettings.php  Makefile.am  docker-compose.yml  docker-compose.yml.in  ldap.json  mediawiki.ac  mediawiki.kconfig  php.ini  zbackup.sh  zimport.sh
services/mediawiki/.install/: docker-compose.yml  mediawiki.conf  rfx-mediawiki.service
services/mediawiki/extensions/: LDAPProvider-REL1_35-ca854c1.tar.gz.1
services/mediawiki/extensions/AJAXPoll/: gitinfo.json  version
services/mediawiki/extensions/Cite/: gitinfo.json  version
services/mediawiki/extensions/ExternalData/: gitinfo.json  version
services/mediawiki/extensions/ExternalData-REL1_35-2a02f87/: gitinfo.json  version
services/mediawiki/extensions/ExternalData/includes/: EDHttpWithHeaders.php  EDUtils.php
services/mediawiki/extensions/LDAPProvider/src/: PlatformFunctionWrapper.php
services/mediawiki/extensions/LdapAuthentication/: gitinfo.json  version
services/mediawiki/extensions/LdapAuthentication/includes/: LdapAuthenticationPlugin.php
services/mediawiki/src/: Dockerfile
services/mediawiki/ssl/certs/certs-from-mail/: as-Certificate-only-PEMencoded-wiki_igi_cnr_it_cert.cer  as-Certificate-w-chain-PEMencoded-wiki_igi_cnr_it.cer  as-Certificate-w-issuer-after-PEMencoded-wiki_igi_cnr_it.pem  asPKCS7-PEMencoded-wiki_igi_cnr_it.crt  asPKCS7-wiki_igi_cnr_it.p7b
services/moodle/: Makefile.am  docker-compose.yml.in
services/openproject/: docker-compose.yml.in
services/spark/: docker-compose.yml.in
